clusters/k4/kubernetes/apps/kube-system/cilium/policies/cilium-health.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cilium-health
spec:
  endpointSelector:
    matchLabels:
      reserved: health
  ingress:
    - fromEntities:
        - cluster
        - remote-node
        - health
  egress:
    - toEntities:
        - cluster
        - remote-node
        - health
