clusters/k4/kubernetes/apps/kube-system/cilium/policies/cilium-reserved-health.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cilium-reserved-health
spec:
  endpointSelector:
    matchLabels:
      reserved: health
  ingress:
    - fromEntities:
        - health
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: cilium
  egress:
    - toEntities:
        - health
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: cilium
