clusters/k4/kubernetes/apps/kube-system/cilium/policies/cilium.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cilium
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: cilium
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: cilium
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: cilium
    - toEntities:
        - host
        - remote-node
