clusters/k4/kubernetes/apps/kube-system/cilium/policies/host-firewall.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-firewall
spec:
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
  - fromEntities:
    - cluster
  - fromCIDRSet:
      - cidrGroupRef: group-lan
    toPorts:
    - ports:
      # Cilium datapath
      - port: "4240"
        protocol: TCP
      # kubernetes-api-ingress
      - port: "6443"
        protocol: TCP
      # apid-ingress
      - port: "50000"
        protocol: TCP
      # trustd-ingress
      - port: "50001"
        protocol: TCP
  - fromCIDRSet:
      - cidrGroupRef: group-lan
    icmps:
      - fields:
          - family: IPv4
            type: 8
          - family: IPv6
            type: 8
          - family: IPv4
            type: EchoRequest
  egress:
    - toEntities:
        - cluster
        - world
    - toCIDRSet:
        - cidrGroupRef: group-lan
