clusters/k4/kubernetes/apps/kube-system/cilium/policies/hubble.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: hubble
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
      app.kubernetes.io/part-of: cilium
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cilium-agent
            app.kubernetes.io/part-of: cilium
      toPorts: &port
        - ports:
            - port: "4244"
              protocol: "ANY"
    - toEntities:
        - host
        - remote-node
      toPorts: *port
